--- a/EmployeeManagementSystem/appsettings.json
+++ b/EmployeeManagementSystem/appsettings.json
@@ -8,5 +8,11 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=PEP-PC-130\\MSSQLSERVER01;Database=TaskManagerDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+
+    "Jwt": {
+        "Key": "YourSecretKeyToTestTheAppHere1234567890",
+        "Issuer": "your_issuer",
+        "Audience": "your_audience"
     }
 }
