--- a/EmployeeManagementSystem/appsettings.json
+++ b/EmployeeManagementSystem/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=PEP-PC-130\\MSSQLSERVER01;Database=TaskManagerDB;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=localhost;Database=EmployeeDB;Trusted_Connection=True;TrustServerCertificate=True;"
     },
 
     "Jwt": {
